# paraphrasing-tool/app/generated/server/openapi_server/controllers/default_controller.py
@@ -1,7 +1,13 @@
 import connexion
+from typing import Dict
+from typing import Tuple
+from typing import Union
+
 from openapi_server.models.assessment_test import AssessmentTest  # noqa: E501
 from openapi_server.models.generate_test_post_request import GenerateTestPostRequest  # noqa: E501
-from llm_api import generate_quiz_with_openai, paraphrase_with_openai
+from openapi_server.models.paraphrase_post_request import ParaphrasePostRequest  # noqa: E501
+from openapi_server import util
+
 
 def generate_test_post(generate_test_post_request):  # noqa: E501
     """Generate test
@@ -15,23 +21,19 @@ def generate_test_post(generate_test_post_request):  # noqa: E501
     """
     if connexion.request.is_json:
         generate_test_post_request = GenerateTestPostRequest.from_dict(connexion.request.get_json())  # noqa: E501
-        resource_text = generate_test_post_request.resource_text
-        generated_json = generate_quiz_with_openai(resource_text)
-        assessment_test = AssessmentTest.from_json(generated_json)
-        return assessment_test
+    return 'do some magic!'
 
-def paraphrase_post(body):  # noqa: E501
+
+def paraphrase_post(paraphrase_post_request):  # noqa: E501
     """Paraphrase text
 
      # noqa: E501
 
-    :param body: 
-    :type body: str
+    :param paraphrase_post_request: 
+    :type paraphrase_post_request: dict | bytes
 
     :rtype: Union[str, Tuple[str, int], Tuple[str, int, Dict[str, str]]
     """
     if connexion.request.is_json:
-        body = connexion.request.get_json().get("text")
-        style = connexion.request.get_json().get("style", "standard")
-        paraphrased_text = paraphrase_with_openai(body, style)
-        return paraphrased_text
+        paraphrase_post_request = ParaphrasePostRequest.from_dict(connexion.request.get_json())  # noqa: E501
+    return 'do some magic!'
